Fri Jul 25 16:35:48 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkbearoff.c: widget did not update when pressing who's
	was on roll.
	* bearoff.c (ReadSconyers15x15): remove debug print.
	(reported by Hugh Sconyers)
	
Fri Jul 25 07:53:09 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* gtkgame.c (FormatStatEquity,FormatStatCubeError): Remove verbose
	zeros in summary.

Thu Jul 24 19:41:23 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (DumpGameList): show dice for MOVE_SETDICE.

Thu Jul 24 19:29:36 2003  Joern Thyssen  <jth@gnubg.org>

	* import.c (ImportSGGGame): better support for resignations
	in SGG files.
        * html.c (HTMLDumpStatcontext), gtkgame.c (GTKDumpStatcontext), 
        analysis.c (DumpStatcontext): show only luck adj. results
	when calculated.

Thu Jul 24 11:57:54 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* html.c: Small HTML cleanups.
	Complete removel of zeros in summary. Change '*' to HTML bullet.

Wed Jul 22 16:34:15 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* backgammon.h gnubg.c gtkgame.c html.c latex.c postscript.c
	  text.c sgf.c play.c analysis.c import.c export.c

	  doubles and corresponding take moverecords have the same
	  analysis and evalcontext
	
Wed Jul 22 14:17:18 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* gtkcube.c - allow extending cube decision rollouts

Tue Jul 22 14:29:09 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* set.c - add decimal places to j.s.d. displayed value
	* rollout.c - force rollouts of cube decisions to use cubeful
	  rollout contexts

Tue Jul 22 10:41:36 2003  Joseph Heled  <pepster@users.sourceforge.net>

	* html.c (printStatTableMissed): don't print '(-0.000 ( -0.000%))'
	in HTML output. 

Mon Jul 21 23:05:10 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkboard.c (write_points): fix bug when writing boards
	for turn=-1.
	(reported by Dean Gay)

Mon Jul 21 22:13:49 2003  Joern Thyssen  <jth@gnubg.org>

	* html.c (HTMLMatchInfo): only print non-empty values.
